--- a/portfolio-landing.html
+++ b/portfolio-landing.html
@@ -13,7 +13,7 @@
 
         :root {
             --primary-color: #0a0a0a;
-            --accent-color: #646cff;
+            --accent-color: #fc79e2;
             --text-light: #888;
             --bg-dark: #000;
             --bg-light: #fafafa;
@@ -103,7 +103,7 @@
             width: 100%;
             padding: 2rem 4rem;
             z-index: 1000;
-            mix-blend-mode: difference;
+            color: white;
             animation: slideDown 1s ease 2.5s both;
         }
 
@@ -157,7 +157,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff6cee 0%, #ff0000 100%);
             overflow: hidden;
         }
 
@@ -168,9 +168,9 @@
             top: -25%;
             left: -25%;
             background: 
-                radial-gradient(circle at 20% 80%, rgba(100, 108, 255, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(118, 75, 162, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 40% 40%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+                radial-gradient(circle at 20% 80%, rgba(255, 0, 0, 0.3) 0%, transparent 50%),
+                radial-gradient(circle at 80% 20%, rgba(255, 117, 177, 0.3) 0%, transparent 50%),
+                radial-gradient(circle at 40% 40%, rgba(248, 148, 255, 0.1) 0%, transparent 50%);
             animation: float 20s ease-in-out infinite;
         }
 
@@ -567,7 +567,7 @@
     <section id="home" class="hero">
         <div class="hero-bg"></div>
         <div class="hero-content">
-            <h1>Diseño Gráfico</h1>
+            <h1>FONCHITAS</h1>
             <p class="subtitle">Creatividad Visual</p>
             <a href="#projects" class="cta-button">Ver Proyectos</a>
         </div>
