--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,9 @@
 		<meta name="description" content="A student web project for WEB ATELIER (UDIT) course" /> <!-- Descripción para SEO -->
 		<link rel="stylesheet" href="./assets/css/style.css" /> <!-- Enlace a la hoja de estilos principal -->
 		<!-- Sugerencia: Puedes añadir favicon y fuentes externas aquí para mejorar la apariencia -->
+		 <!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+		
 	</head>
 	<body>
 		<a href="#main" class="skip-link">Skip to main content</a> <!-- Enlace de accesibilidad para saltar al contenido principal -->
@@ -62,5 +65,7 @@
 
 		<script src="./assets/js/main.js"></script> <!-- Enlace al archivo JavaScript principal -->
 		<!-- Sugerencia: Añade scripts adicionales al final para mejorar el rendimiento -->
+		 <!-- Bootstrap JavaScript Bundle (includes Popper) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
